gitops/apps/hr-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-system
  namespace: hr-system
  annotations:
    argocd.argoproj.io/sync-wave: "4"
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/security-groups: sg-0f8418e05dd9b3ed7
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/load-balancer-name: hr-system-prod
    alb.ingress.kubernetes.io/tags: Project=hr-system,Environment=prod,ManagedBy=argocd
  labels:
    app.kubernetes.io/name: hr-system
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: hr-system
spec:
  ingressClassName: alb
  rules:
    - host: www.imcherry5778.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: frontend, port: {name: http}}
    - host: admin.imcherry5778.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: {name: frontend, port: {name: http}}
